<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/topBar">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:tint="@color/white"
            android:layout_alignParentBottom="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="14dp"
            android:text="@string/settings_screen_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar">

        <RelativeLayout
            android:id="@+id/inAppView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/inApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_app_product"
                android:layout_margin="20dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/inApp"
                android:background="@color/seperator"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/privacyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inAppView">

            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_privacy"
                android:layout_margin="20dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/privacy"
                android:background="@color/seperator"/>
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>